content/terraform-cdk/v0.14.x/docs/cdktf/concepts/functions.mdx
---
page_title: Functions - CDK for Terraform
description: Learn when to use built-in Terraform functions to transform or combine values.
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2025-04-29T15:45:46-05:00
last_modified: 2025-04-29T15:45:46-05:00
# END AUTO GENERATED METADATA
---

# Functions

Terraform provides a set of built-in functions that transform and combine values within Terraform configurations. The [Terraform function documentation](/language/functions) contains a complete list. You can also use your editor autocompletion on the `Fn` object to find available options.

Functions can handle normal and [token](/cdktf/concepts/tokens) values and will return either tokenized values or `IResolvable` values.

## When to Use Terraform Functions

Use Terraform functions when you need to calculate new values based on runtime values that are unknown before Terraform applies a configuration. For example, instance IDs that cloud providers assign on creation.

When inputs are available before [synthesizing your code](/cdktf/cli-reference/commands#synth) (e.g. local files), we recommend transforming the values with your preferred programming language.

## Usage Example

The following example uses a Data Source from the AWS Provider to fetch the Availability Zones of the given region. As this data is unknown until Terraform applies the configuration, this CDKTF application uses both [Terraform Outputs](/cdktf/concepts/variables-and-outputs#output-values) and the Terraform [`element`](/language/functions/element) function.

The `element` function gets the first element from the list of Availability Zone names.

<!-- #NEXT_CODE_BLOCK_SOURCE:java examples/java/documentation#functions-usage-example -->
<!-- #NEXT_CODE_BLOCK_SOURCE:python examples/python/documentation#functions-usage-example -->
<!-- #NEXT_CODE_BLOCK_SOURCE:csharp examples/csharp/documentation#functions -->

<CodeTabs>

```ts
import { Fn, TerraformOutput } from "cdktf";
import { DataAwsAvailabilityZones } from "@cdktf/provider-aws/lib/data-aws-availability-zones";

// ...

const zones = new DataAwsAvailabilityZones(this, "zones", {
  state: "available",
});

new TerraformOutput(this, "first-zone", {
  value: Fn.element(zones.names, 0),
});

// ...
```

```java
import com.hashicorp.cdktf.Fn;
import com.hashicorp.cdktf.TerraformOutput;
import com.hashicorp.cdktf.TerraformOutputConfig;
import imports.aws.data_aws_availability_zones.DataAwsAvailabilityZones;
import imports.aws.data_aws_availability_zones.DataAwsAvailabilityZonesConfig;

        DataAwsAvailabilityZones zones = new DataAwsAvailabilityZones(this, "zones",
                DataAwsAvailabilityZonesConfig.builder()
                        .state("available")
                        .build());

        new TerraformOutput(this, "first-zone", TerraformOutputConfig.builder()
                .value(Fn.element(zones.getNames(), 0))
                .build());
```

```python
from cdktf import Fn, TerraformOutput
from imports.aws.provider import AwsProvider
from imports.aws.data_aws_availability_zones import DataAwsAvailabilityZones

        zones = DataAwsAvailabilityZones(self, 'zones',
                    state="available",
                )

        TerraformOutput(self, 'first-zone',
            value=Fn.element(zones.names, 0)
        )

```

```csharp
using System;
using System.IO;
using System.Collections.Generic;
using System.Linq;
using Constructs;
using HashiCorp.Cdktf;
using aws.Provider;
using aws.DataAwsAvailabilityZones;

namespace Examples
{
    class FunctionStack : TerraformStack
    {
        public FunctionStack(Construct scope, string name) : base(scope, name)
        {

            new AwsProvider(this, "aws", new AwsProviderConfig {
                Region = "eu-central-1"
            });

            DataAwsAvailabilityZones zones = new DataAwsAvailabilityZones(this, "zones", new DataAwsAvailabilityZonesConfig {
                State = "available"
            });

            new TerraformOutput(this, "first-zone", new TerraformOutputConfig {
                Value = Fn.Element(zones.Names, 0)
            });
        }
    }
}
```

</CodeTabs>

## Operators

Use the `Op` object to include operators like `!`, `+`, and `-`.

```typescript
import { Fn, Op, TerraformOutput } from "cdktf";

// ...

const const zones = new DataAwsAvailabilityZones(this, "zones", {
  state: "available",
});

new TerraformOutput(this, "half-of-the-zone", {
  value: Op.div(Fn.length(zones.names), 2),
});
```
